Описание формальной БНФ-грамматики

--- a/InteractiveJez/Report.tex
+++ b/InteractiveJez/Report.tex
@@ -9,24 +9,40 @@
 
 \section{Теоретическая основа}
 
+Для описания введённых структур данных используется \textit{формальная}
+БНФ-грамматика. Все литералы имеют один из трёх префиксов: \texttt{s.},
+\texttt{t.} или \texttt{e.}, соотвествующих \textit{символам}, \textit{термам} и
+\textit{объектным выражениям} в языке Рефал.
+
+Помимо явных символьных слов типа \texttt{AreEqual}, \texttt{Var} и т.п.
+используются следующие нетерминалы:
+\begin{itemize}
+  \item \texttt{s.NUMBER} --- любая макроцифра; 
+  \item \texttt{s.CHAR} --- любой символ; 
+  \item \texttt{s.WORD} --- любое (символьное) слово.
+  \item \texttt{e.ANY} --- произвольное объектное выражение.
+\end{itemize}
+
+Символы \texttt{*} и \texttt{+} означают повторение литерала ноль и более и
+один и более раз соответственно.
+
 \subsection{Составляющие уравнения}
 
 Рассматриваются уравнения в словах с алфавитом переменных $\Xi$ и алфавитом
 констант $\Sigma$. Применение алгоритма Jez'а предполагает хранение
 дополнительной информации об уравнении: какие константы являются результатом
-сжатия блоков, какие переменные не могут быть пусты и т.д. Поэтому в Рефале
-уравнение представляется структурой данных \texttt{t.Eq}:
+сжатия блоков, какие переменные не могут быть пусты и т.д. Поэтому
+\textit{уравнение} представляется структурой данных \texttt{t.Eq}:
 \begin{Verbatim}
-  t.Eq ::= ((AreEqual (e.LHS) (e.RHS)) (t.Constr*) (t.Cond*)),
+  t.Eq ::= ((AreEqual (t.Elem*) (t.Elem*)) (t.Constr*) (t.Cond*)),
 \end{Verbatim}
-где \texttt{e.LHS} и \texttt{e.RHS} содержат левую и правую части уравнения,
-\texttt{t.Constr} представляет ограничения на переменные, а \texttt{t.Cond}
---- условия на константы.
+где \texttt{(t.Elem*)} есть левая и правая части уравнения, \texttt{(t.Constr*)}
+--- ограничения на переменные, а \texttt{(t.Cond*)} содержит условия на
+константы.
 
-Выражения \texttt{e.LHS} и \texttt{e.RHS} состоят из произвольного числа
-\textit{переменных} и \textit{констант}, представляющихся структурами
-\texttt{t.Var} и \texttt{t.Const} соответственно. Нередко константы и переменные
-обобщённо называются \textit{элементами} типа \texttt{t.Elem}:
+\textit{Элемент} \texttt{t.Elem} обобщённо представляет \textit{константу} или
+\textit{переменную}, соответствующие структурам данных \texttt{t.Const} и
+\texttt{t.Var}:
 \begin{Verbatim}
   t.Elem ::= t.Var | t.Elem,
   t.Var ::= (Var s.CHAR),
@@ -35,41 +51,41 @@
 
 \subsection{Ограничения на переменные}
 
-Ограничения на переменные представляются структурой \texttt{t.Constr} и
-описываются в конъюнктивной нормальной форме. Литералами дизъюнкций являются
-рестрикции (отрицательные условия на переменные) типа \texttt{t.Restr},
-подразделяющиеся на краевые \texttt{t.BoundRestr} и рестрикции на пустоту
-\texttt{t.EmptyRestr}:
+\textit{Ограничение на переменную} представляется структурой \texttt{t.Constr}
+и описывается в конъюнктивной нормальной форме. Литералами дизъюнкций являются
+\textit{рестрикции} (отрицательные условия на переменные) типа \texttt{t.Restr},
+подразделяющиеся на \textit{краевые} \texttt{t.BoundRestr} и рестрикции
+\textit{на пустоту} \texttt{t.EmptyRestr}:
 \begin{Verbatim}
   t.Restr ::= t.BoundRestr | t.EmptyRestr.
 \end{Verbatim}
 
-\textit{Краевые} рестрикции бывают префиксными \texttt{t.PrefixRestr} и
-суффиксными \texttt{t.SuffixRestr}. Они указывают, на какие константы не может
-начинаться (кончаться) данная переменная.
+Краевые рестрикции бывают \textit{префиксными} \texttt{t.PrefixRestr} и
+\textit{суффиксными} \texttt{t.SuffixRestr}. Они указывают, на какие константы
+не может начинаться (кончаться) данная переменная.
 \begin{Verbatim}
   t.BoundRestr ::= t.PrefixRestr | t.SuffixRestr,
   t.PrefixRestr ::= (not t.Const starts t.Var),
   t.SuffixRestr ::= (not t.Const ends t.Var).
 \end{Verbatim}
 
-Рестрикция \textit{на пустоту} \texttt{t.EmptyRestr} сообщает, как следует, о
+Рестрикция на пустоту \texttt{t.EmptyRestr} сообщает, как следует, о
 невозможности обращения данной переменной в пустое слово $\varepsilon$:
 \begin{Verbatim}
   t.EmptyRestr ::= (not empty t.Var).
 \end{Verbatim}
 
 Ограничения на переменные \texttt{t.Constr} могут содержать одну или две
-рестрикции, в соответствии с чем называются тривиальными
-\texttt{t.TrivialConstr} и нетривиальными \texttt{t.NonTrivialConstr}. В
-программе используется только четыре вида ограничений:
+рестрикции, в соответствии с чем называются \textit{тривиальными}
+\texttt{t.TrivialConstr} и \textit{нетривиальными} \texttt{t.NonTrivialConstr}.
+В программе используется только четыре вида ограничений:
 \begin{Verbatim}
   t.Constr ::= t.TrivialConstr | t.NonTrivialConstr
   t.TrivialConstr ::= (OR t.Restr),
   t.NonTrivialConstr ::= (OR t.SuffixRestr t.PrefixRestr).
 \end{Verbatim}
 
-Говоря далее "ограничения" мы, как правило, будем подразумевать именно
+Говоря далее ограничения мы, как правило, будем подразумевать именно
 тривиальные, если не оговорено противное, а также будем экстраполировать
 тип рестрикции на ограничение её содержащее: префиксное ограничение,
 ограничение на пустоту и т.д.
@@ -78,7 +94,7 @@
 
 \textit{Условие на константу} \texttt{t.Cond} содержит сжимаемые блоки и
 соотвествующую этому сжатию константу. Вообще, \textit{блок} \texttt{t.Block}
-представляется в виде
+обозначает степень константы и представляется в виде
 \begin{Verbatim}
   t.Block ::= (t.Const t.Exp* (const s.NUMBER)),
 \end{Verbatim}
@@ -100,9 +116,8 @@
 
 Мы хотим применять \texttt{Pair}- и \texttt{Block}-сжатие не только к
 тривиальным константам, но и тем, что уже являются результатом сжатия в блоки.
-Для корректной обработки ограничений на переменные необходимо аккуратно
-отслеживать, на какие константы не может начинаться (кончаться) та или иная
-переменная.
+Для корректной обработки ограничений необходимо аккуратно отслеживать, на какие
+константы не может начинаться (кончаться) та или иная переменная.
 
 Пусть $\alpha, \gamma \in \Sigma$. Скажем, что $\alpha \in First(\gamma)$, если
 существует цепочка условий на константы такая, что
@@ -128,9 +143,9 @@ $\gamma$, если $\alpha \in First(\gamma)$ или $\alpha \in Last(\gamma)$.
 $First(\gamma)$ и $Last(\gamma)$ соответственно.
 
 Пусть даны два таких ограничения одного типа с константами $\alpha$ и $\beta$.
-Если $\alpha \in Bound(\beta)$, то $\alpha$-ограничение (то, что с константой
-$\alpha$) является \textbf{более сильным}. В то же время $\beta$-ограничение
-есть \textbf{более слабое} по сравнению с первым.
+Если $\alpha \in Bound(\beta)$, то $\alpha$-ограничение является
+\textbf{более сильным}. В то же время $\beta$-ограничение есть
+\textbf{более слабое} по сравнению с первым.
 
 Имеет смысл хранить в уравнении лишь самые сильные ограничения.
 
