Расширение базы и описание Pick

--- a/InteractiveJez/Report.tex
+++ b/InteractiveJez/Report.tex
@@ -15,7 +15,7 @@
 \textit{объектным выражениям} в языке Рефал.
 
 Помимо явных символьных слов типа \texttt{AreEqual}, \texttt{Var} и т.п.
-используются следующие нетерминалы:
+используются следующие терминалы:
 \begin{itemize}
   \item \texttt{s.NUMBER} --- любая макроцифра; 
   \item \texttt{s.CHAR} --- любой символ; 
@@ -26,7 +26,7 @@
 Символы \texttt{*} и \texttt{+} означают повторение литерала ноль и более и
 один и более раз соответственно.
 
-\subsection{Составляющие уравнения}
+\subsection{Представление уравнения}
 
 Рассматриваются уравнения в словах с алфавитом переменных $\Xi$ и алфавитом
 констант $\Sigma$. Применение алгоритма Jez'а предполагает хранение
@@ -36,9 +36,9 @@
 \begin{Verbatim}
   t.Eq ::= ((AreEqual (t.Elem*) (t.Elem*)) (t.Constr*) (t.Cond*)),
 \end{Verbatim}
-где \texttt{(t.Elem*)} есть левая и правая части уравнения, \texttt{(t.Constr*)}
---- ограничения на переменные, а \texttt{(t.Cond*)} содержит условия на
-константы.
+где выражения \texttt{(t.Elem*)} представляют левую и правую части уравнения,
+\texttt{(t.Constr*)} --- ограничения на переменные, а \texttt{(t.Cond*)}
+содержит условия на константы.
 
 \textit{Элемент} \texttt{t.Elem} обобщённо представляет \textit{константу} или
 \textit{переменную}, соответствующие структурам данных \texttt{t.Const} и
@@ -48,6 +48,13 @@
   t.Var ::= (Var s.CHAR),
   t.Const ::= (s.CHAR s.NUMBER).
 \end{Verbatim}
+
+Назвовём \textbf{сокращением} уравнения удаление всех совпадающих префиксных
+и суффиксных элементов его левой и правой частей. В результате получаем
+\textbf{сокращённое} уравнение.
+
+Назовём два уравнения \textbf{эквивалентными}, если их сокращение производит
+уравнения с одинаковыми левыми и правыми частями.
 
 \subsection{Ограничения на переменные}
 
@@ -74,6 +81,9 @@
 \begin{Verbatim}
   t.EmptyRestr ::= (not empty t.Var).
 \end{Verbatim}
+
+В частности, будем называть переменную \textbf{непустой}, если для неё
+существует такая рестрикция, и \textbf{пустой} в противном случае.
 
 Ограничения на переменные \texttt{t.Constr} могут содержать одну или две
 рестрикции, в соответствии с чем называются \textit{тривиальными}
@@ -103,7 +113,7 @@
 --- переменный показатель степени. Таким образом, условие на константу
 представляется в виде
 \begin{Verbatim}
-  t.Cond ::= (t.Const is t.Block+)
+  t.Cond ::= (t.Const is t.Block+).
 \end{Verbatim}
 В программе используется только два типа условий: \textit{парное условие}
 \texttt{t.PairCond} и \textit{условие на блок} \texttt{t.BlockCond}:
@@ -142,23 +152,38 @@ $\gamma$, если $\alpha \in First(\gamma)$ или $\alpha \in Last(\gamma)$.
 отношения} на множествах префиксных и суффиксных ограничений $X$ с константами
 $First(\gamma)$ и $Last(\gamma)$ соответственно.
 
-Пусть даны два таких ограничения одного типа с константами $\alpha$ и $\beta$.
-Если $\alpha \in Bound(\beta)$, то $\alpha$-ограничение является
-\textbf{более сильным}. В то же время $\beta$-ограничение есть
-\textbf{более слабое} по сравнению с первым.
+Пусть даны два, например, префиксных ограничения с константами $\alpha$ и
+$\beta$ (для суффиксных --- аналогично). Если $\alpha \in First(\beta)$, то
+$\alpha$-ограничение является \textbf{более сильным}. В то же время
+$\beta$-ограничение есть \textbf{более слабое} по сравнению с первым. Имеет
+смысл хранить в уравнении лишь самые сильные ограничения.
 
-Имеет смысл хранить в уравнении лишь самые сильные ограничения.
+Например, уравнение содержит ограничения
+\begin{Verbatim}
+  t.ConstrA1: (OR (not ('A' 1) ends (Var 'X')),
+  t.ConstrC0: (OR (not ('C' 0) ends (Var 'X'))
+\end{Verbatim}
+и условие
+\begin{Verbatim}
+  t.Cond: (('A' 1) is (('B' 0) (const 1)) (('C' 0) (const 1))).
+\end{Verbatim}
+Тогда в уравнении можно оставить только \texttt{t.ConstrC0}, так как оно
+сильнее ограничения \texttt{t.ConstrA1}
 
 \subsection{Избыточные рестрикции и условия}
 
-В результате некоторых действий какие-то рестрикции могут стать неактуальными,
-вследствие чего их желательно удалять из уравнения.
+В результате некоторых действий краевые рестрикции могут стать неактуальными
+(с рестрикциями на пустоту такого не происходит), вследствие чего их
+можно удалить из уравнения. Будем называть (краевую) рестрикцию
+\textbf{избыточной} в двух случаях:
+\begin{itemize}
+  \item участвующей в ней переменной нет в уравнении;
+  \item участвующей в ней константы нет в уравнении, а также в правых частях
+  условий на константы.
+\end{itemize}
 
-Скажем, что рестрикция \textbf{избыточная}, если участвующей в ней константы
-нет в уравнении, а также в правых частях условий на константы.
-
-Как и рестрикция, условие (на константу) также может стать \textbf{избыточным}.
-Это происходит в двух случаях:
+Условие (на константу) также может стать \textbf{избыточным}. Это происходит в
+следующих случаях:
 \begin{itemize}
   \item константа в левой части условия не участвует в уравнении и не является
   $Bound$-элементом какой-либо другой константы;
@@ -166,19 +191,64 @@ $First(\gamma)$ и $Last(\gamma)$ соответственно.
   в уравнении и они не являются левыми частями каких-либо других условий.
 \end{itemize}
 
+\subsection{Обработка нетривиальных ограничений}
+
+Нетривиальные ограничения на переменные также могут подвергаться обработке.
+Пусть уравнение содержит
+\begin{Verbatim}
+  t.NonTrivialConstr: (OR t.SuffixRestr t.PrefixRestr).
+\end{Verbatim}
+Если в уравнении найдётся более сильное в сравнении с
+\texttt{(OR t.SuffixRestr)} или \texttt{(OR t.PrefixRestr)} краевое ограничение,
+то \texttt{t.NonTrivialConstr} \textbf{выполняется тривиально}, и его можно
+удалить. Это же происходит и в случаях, когда хотя бы одна из рестрикций
+\texttt{t.SuffixRestr} и \texttt{t.PrefixRestr} избыточна.
+
+Иногда нам потребуется модифицировать нетривиальные ограничения. Например, мы
+хотим выполнить подстановку, конфликтующую с одной из рестрикций такого
+ограничения. В таком случае мы \textbf{вынуждаем} выполнение другой рестрикции,
+превращая тем самым нетривиальное ограничение в тривиальное.
+
 \subsection{Нормальное уравнение}
 
-Скажем, что уравнение \textbf{несократимо}, если его левая и правая части не
-имеют совпадающих префиксов и суффиксов.
-
 Будем называть уравнение \textbf{нормальным}, если оно несократимо, не содержит
-слабых (краевых) ограничений и избыточных рестрикций и условий. Также
-потребуем, чтобы в нормальном уравнении все ограничения были отсортированы,
-равно как и показатели степеней \texttt{t.Exp} условий на блок.
+слабых и тривиально выполняющихся ограничений и избыточных рестрикций и условий.
+Также потребуем, чтобы в нормальном уравнении все ограничения были
+отсортированы, равно как и показатели степеней \texttt{t.Exp} условий на блок.
 
 Нормальные уравнения представляют особый интерес для нас. Именно такие уравнения
 возращают и ожидают получить на вход функции \texttt{Pick}, \texttt{SubstIndex},
 \texttt{PairComp} и \texttt{BlockComp}.
+
+\section{Функция \texttt{Pick}}
+
+Скажем, что решение уравнения \textbf{неминимальное}, если его левая и правая
+части состоят из непустых переменных и только них.
+
+Функция \texttt{Pick} принимает макроцифру \texttt{s.NUMBER} и уравнения
+\texttt{t.Eq+}. Выбрав уравнение под номером \texttt{s.NUMBER}, подставляет
+все его пустые переменные в $\varepsilon$. Функция возращает
+\begin{itemize}
+  \item \texttt{Success}, если новое уравнение эквивалентно уравнению
+  $\varepsilon = \varepsilon$;
+\item \texttt{NotMinimal}, если решение такого уравнения неминимальное;
+\item новое нормальное уравнение в остальных случаях.
+\end{itemize}
+
+Здесь и далее часто требуется выполнять \textit{нерекурсивные подстановки} в
+выражение. Определим для этого специальный формат \texttt{t.Subst}:
+\begin{Verbatim}
+  t.Subst ::= (assign (e.ANY) (e.ANY)),
+\end{Verbatim}
+где первое выражение \texttt{e.ANY} --- заменяемое, а второе --- новое.
+
+\texttt{Pick} имеет довольно простую реализацию: из множества всех переменных
+уравнения вычитаются непустые. Для оставшихся переменных генерируются
+и выполняются подстановки в $\varepsilon$. Если получившееся уравнение
+эквивалентно $\varepsilon = \varepsilon$, возвращаем, как говорилось,
+\texttt{Success}. Иначе получаем множество констант нового уравнения и
+возвращаем \texttt{NotMinimal}, если оно пусто, и получившееся уравнение с
+удалёнными (в связи с пустотой) избыточными рестрикциями в противном случае.
 
 \end{document}
 
