--- a/InteractiveJez/Report.tex
+++ b/InteractiveJez/Report.tex
@@ -9,22 +9,25 @@
 
 \section{Теоретическая основа}
 
-Для описания введённых структур данных используется \textit{формальная}
-БНФ-грамматика. Все литералы имеют один из трёх префиксов: \texttt{s.},
-\texttt{t.} или \texttt{e.}, соотвествующих \textit{символам}, \textit{термам} и
-\textit{объектным выражениям} в языке Рефал.
+Для описания структур данных используется \textit{формальная} БНФ-грамматика.
+Все литералы имеют один из трёх префиксов: \texttt{s.}, \texttt{t.} или
+\texttt{e.}, соотвествующие \textit{символам}, \textit{термам} и
+\textit{объектным выражениям} языка Рефал.
 
-Помимо явных символьных слов типа \texttt{AreEqual}, \texttt{Var} и т.п.
+Помимо явных символьных слов (\texttt{AreEqual}, \texttt{Var} и т.п.)
 используются следующие терминалы:
 \begin{itemize}
   \item \texttt{s.NUMBER} --- любая макроцифра; 
   \item \texttt{s.CHAR} --- любой символ; 
-  \item \texttt{s.WORD} --- любое (символьное) слово.
+  \item \texttt{s.WORD} --- любое символьное слово.
   \item \texttt{e.ANY} --- произвольное объектное выражение.
 \end{itemize}
 
 Символы \texttt{*} и \texttt{+} означают повторение литерала ноль и более и
 один и более раз соответственно.
+
+Помимо \texttt{::=} используется инфиксный оператор \texttt{:}, означающий
+"выражение слева представляется как выражение справа".
 
 \subsection{Представление уравнения}
 
@@ -53,30 +56,30 @@
 и суффиксных элементов его левой и правой частей. В результате получаем
 \textbf{сокращённое} уравнение.
 
-Назовём два уравнения \textbf{эквивалентными}, если их сокращение производит
-уравнения с одинаковыми левыми и правыми частями.
+Два уравнения будем называть \textbf{эквивалентными}, если их сокращение
+производит уравнения с одинаковыми левыми и правыми частями.
 
 \subsection{Ограничения на переменные}
 
-\textit{Ограничение на переменную} представляется структурой \texttt{t.Constr}
-и описывается в конъюнктивной нормальной форме. Литералами дизъюнкций являются
+\textit{Ограничения на переменные} представляются структурой \texttt{t.Constr}
+и описываются в конъюнктивной нормальной форме. Литералами дизъюнкций являются
 \textit{рестрикции} (отрицательные условия на переменные) типа \texttt{t.Restr},
-подразделяющиеся на \textit{краевые} \texttt{t.BoundRestr} и рестрикции
-\textit{на пустоту} \texttt{t.EmptyRestr}:
+подразделяющиеся на краевые \texttt{t.BoundRestr} и рестрикции на пустоту
+\texttt{t.EmptyRestr}:
 \begin{Verbatim}
   t.Restr ::= t.BoundRestr | t.EmptyRestr.
 \end{Verbatim}
 
-Краевые рестрикции бывают \textit{префиксными} \texttt{t.PrefixRestr} и
+\textit{Краевые} рестрикции бывают \textit{префиксными} \texttt{t.PrefixRestr} и
 \textit{суффиксными} \texttt{t.SuffixRestr}. Они указывают, на какие константы
-не может начинаться (кончаться) данная переменная.
+не может начинаться или кончаться данная переменная.
 \begin{Verbatim}
   t.BoundRestr ::= t.PrefixRestr | t.SuffixRestr,
   t.PrefixRestr ::= (not t.Const starts t.Var),
   t.SuffixRestr ::= (not t.Const ends t.Var).
 \end{Verbatim}
 
-Рестрикция на пустоту \texttt{t.EmptyRestr} сообщает, как следует, о
+\textit{Рестрикция на пустоту} \texttt{t.EmptyRestr} сообщает, как следует, о
 невозможности обращения данной переменной в пустое слово $\varepsilon$:
 \begin{Verbatim}
   t.EmptyRestr ::= (not empty t.Var).
@@ -127,7 +130,7 @@
 Мы хотим применять \texttt{Pair}- и \texttt{Block}-сжатие не только к
 тривиальным константам, но и тем, что уже являются результатом сжатия в блоки.
 Для корректной обработки ограничений необходимо аккуратно отслеживать, на какие
-константы не может начинаться (кончаться) та или иная переменная.
+константы не может начинаться и кончаться та или иная переменная.
 
 Пусть $\alpha, \gamma \in \Sigma$. Скажем, что $\alpha \in First(\gamma)$, если
 существует цепочка условий на константы такая, что
@@ -158,17 +161,17 @@ $\alpha$-ограничение является \textbf{более сильны
 $\beta$-ограничение есть \textbf{более слабое} по сравнению с первым. Имеет
 смысл хранить в уравнении лишь самые сильные ограничения.
 
-Например, уравнение содержит ограничения
+Пусть, например, уравнение содержит ограничения
 \begin{Verbatim}
-  t.ConstrA1: (OR (not ('A' 1) ends (Var 'X')),
-  t.ConstrC0: (OR (not ('C' 0) ends (Var 'X'))
+  t.Constr1: (OR (not ('A' 1) ends (Var 'X')),
+  t.Constr2: (OR (not ('C' 0) ends (Var 'X'))
 \end{Verbatim}
 и условие
 \begin{Verbatim}
   t.Cond: (('A' 1) is (('B' 0) (const 1)) (('C' 0) (const 1))).
 \end{Verbatim}
-Тогда в уравнении можно оставить только \texttt{t.ConstrC0}, так как оно
-сильнее ограничения \texttt{t.ConstrA1}
+Тогда в уравнении можно оставить только \texttt{t.Constr2}, так как оно
+сильнее ограничения \texttt{t.Constr1}
 
 \subsection{Избыточные рестрикции и условия}
 
@@ -182,13 +185,13 @@ $\beta$-ограничение есть \textbf{более слабое} по с
   условий на константы.
 \end{itemize}
 
-Условие (на константу) также может стать \textbf{избыточным}. Это происходит в
+Условие на константу также может стать \textbf{избыточным}. Это происходит в
 следующих случаях:
 \begin{itemize}
   \item константа в левой части условия не участвует в уравнении и не является
   $Bound$-элементом какой-либо другой константы;
-  \item условие имеет парный тип, обеих констант его правой части нет
-  в уравнении и они не являются левыми частями каких-либо других условий.
+  \item условие имеет парный тип, обеих констант его правой части нет в
+  уравнении и на них нет каких-либо других условий.
 \end{itemize}
 
 \subsection{Обработка нетривиальных ограничений}
@@ -201,13 +204,19 @@ $\beta$-ограничение есть \textbf{более слабое} по с
 Если в уравнении найдётся более сильное в сравнении с
 \texttt{(OR t.SuffixRestr)} или \texttt{(OR t.PrefixRestr)} краевое ограничение,
 то \texttt{t.NonTrivialConstr} \textbf{выполняется тривиально}, и его можно
-удалить. Это же происходит и в случаях, когда хотя бы одна из рестрикций
+удалить. Это же происходит и в случае, когда хотя бы одна из рестрикций
 \texttt{t.SuffixRestr} и \texttt{t.PrefixRestr} избыточна.
 
+Будем называть префиксную рестрикцию с константой $\alpha \in \Sigma$
+\textbf{зависимой} относительно некоторого $\beta \in \Sigma$, если
+$\alpha \in First(\beta) \cup \beta$. В противном случае рестрикция называется
+\textbf{независимой}.
+
 Иногда нам потребуется модифицировать нетривиальные ограничения. Например, мы
-хотим выполнить подстановку, конфликтующую с одной из рестрикций такого
-ограничения. В таком случае мы \textbf{вынуждаем} выполнение другой рестрикции,
-превращая тем самым нетривиальное ограничение в тривиальное.
+хотим выполнить подстановку $X \to X \alpha, X \in \Xi, \alpha \in \Sigma$, при
+наличии такого ограничения с зависимой относительно $\alpha$ рестрикцией. Мы
+\textbf{вынуждаем} выполнение второй рестрикции, превращая тем самым
+нетривиальное ограничение в тривиальное.
 
 \subsection{Нормальное уравнение}
 
@@ -249,6 +258,43 @@ $\beta$-ограничение есть \textbf{более слабое} по с
 \texttt{Success}. Иначе получаем множество констант нового уравнения и
 возвращаем \texttt{NotMinimal}, если оно пусто, и получившееся уравнение с
 удалёнными (в связи с пустотой) избыточными рестрикциями в противном случае.
+
+\section{SubstIndex}
+
+Функция \texttt{SubstIndex} принимает индекс \texttt{s.Index: s.WORD},
+показатели \texttt{e.Exps: t.Exp+}, уравнение \texttt{t.Eq} и выполянет
+подстановку показателей на место данного индекса.
+
+Для каждого условия на блок с показателем \texttt{(s.Index s.NUMBER)} заменим 
+этот показатель на множество \texttt{e.Exps}, домноженное на постоянную
+\texttt{s.NUMBER}. Обычно после этого шага порядок показателей нарушается ---
+их необходимо отсортировать.
+
+В результате подстановки мог получиться блок вида
+\begin{Verbatim}
+  (t.Const (const 0))
+\end{Verbatim}
+Такой блок \textit{коллапсирует}, а вместе с ним коллапсирует и содержавшее
+его условие (вообще, подстановка показателей возможна только в условия на блок,
+которые всегда содержат степень единственного сжатого элемента). Нам полезно
+на месте генерировать подстановки констант из левых частей таких условий в
+$\varepsilon$: позже мы осуществим эти подстановки в левой и правой частях
+уравнения, чтобы избавиться от ненужных констант.
+
+Также мы могли получить условия с разными левыми, но одинаковыми правыми
+частями:
+\begin{Verbatim}
+  t.Cond1: (t.Const1 is (t.Const e.Exps (const s.NUMBER))),
+  t.Cond2: (t.Const2 is (t.Const e.Exps (const s.NUMBER))).
+\end{Verbatim}
+В таком случае мы сохраняем лишь одно условие (в реализации --- с
+лексикографически наименьшей константой), например, \texttt{t.Cond1}, и
+генерируем замену константы второго условия \texttt{t.Const2} на
+\texttt{t.Const1}.
+
+Выполняем в уравнении все сгенерированные подстановки (коллапсировавших
+констант в пустое слово и констант замённых условий). Остаётся лишь
+нормализовать полученное уравнение.
 
 \end{document}
 
