Начата генерация опций BlockComp

--- a/InteractiveJez/Report.tex
+++ b/InteractiveJez/Report.tex
@@ -5,6 +5,7 @@
 \usepackage[english,russian]{babel}
 \usepackage{fancyvrb}
 \usepackage{amsfonts}
+\usepackage{mathtools}
 
 \begin{document}
 
@@ -476,8 +477,9 @@ $\alpha$ с новой переменной, следующей прямо за 
 
 Остановимся на какой-нибудь ветви. Как только на ней заканчиваются возможные
 существенные пустые подстановки, начинается поиск всех существенных непустых
---- элементарных и композитных. Среди них удаляются дубликаты и определяются
-специальные подстановки.
+--- элементарных и композитных. Они отбираются с учётом существующих краевых
+ограничений, поэтому на выходе получаем только возможные подстановки. Среди
+них удаляются дубликаты, а также определяются специальные подстановки.
 
 Теперь можно генерировать первичные наборы опций, которые в дальнейшем будут
 декартово переменожаться. Говоря \textit{подстановка выполняется} будем
@@ -525,6 +527,60 @@ $\alpha$ с новой переменной, следующей прямо за 
 подстановки применяются к уравнению. Образовавшиеся явные пары сжимаются.
 Ограничения полученного уравнения подменяются ограничениями опции, и результат
 нормализуется.
+
+
+
+\section{Функция \texttt{BlockComp}}
+
+Предположим, что в уравнении нет тривиальных ограничений на его переменную $X
+\in \Xi$ (\textit{нетривиальные ограничения не обрабатываются}). При сжатии $X$
+в блок $\alpha \in \Sigma$ необходимо рассмотреть два случая:
+\begin{itemize}
+  \item переменная \textit{коллапсирует} в блок:
+  \begin{equation} \label{block:collapsed}
+    X \to \alpha^i, \ i \in \mathbb{N} \cup \{ 0 \}.
+  \end{equation}
+
+  \item происходит извлечение максимальных префиксных и суффиксных блоков у
+  переменной:
+  \begin{equation} \label{block:extracted}
+    X \to \alpha^i X \alpha^j, \ i, j \in \mathbb{N} \cup \{ 0 \}.
+  \end{equation}
+  Теперь $X$ не может начинаться или кончаться на $\alpha$ в силу
+  максимальности извлечённых блоков, а также не может быть пустым (иначе
+  переменная сжимается в блок)
+  \begin{equation} \label{block:constraints}
+    X \ne \alpha X, \quad X \ne X \alpha, \quad X \ne \varepsilon.
+  \end{equation}
+\end{itemize}
+
+Допустим, в уравнении есть префиксные ограничения на $X$, независимые
+относительно $\alpha$ (суффиксные ограничения здесь и далее обрабатываются
+симметричным образом). Нужно рассмотреть два случая в \eqref{block:extracted}.
+\begin{itemize}
+  \item Префиксный блок пуст, извлекается только суффиксный:
+  \begin{displaymath}
+    X \to X \alpha^j, \ j \in \mathbb{N} \cup \{ 0 \}.
+  \end{displaymath}
+  Исходные ограничения сохраняются с присоединением ограничений
+  \eqref{block:constraints}.
+  
+  \item Префиксный блок \textit{не} пуст:
+  \begin{displaymath}
+    X \to \alpha^i X \alpha^j, \ i, j \in \mathbb{N} \cup \{ 0 \}.
+  \end{displaymath}
+
+  Ограничения на переменную удаляются, но \eqref{block:constraints} всё так же
+  добавляются.
+\end{itemize}
+
+Пусть вместе с присутствующими или отсутствующими независимыми префиксными
+ограничениями на $X$ переменная также непуста. Это влияет только на сжатие
+в блок \eqref{block:collapsed}: подстановка заменяется на
+\begin{equation} \label{block:non-empty-collapsed}
+  X \to \alpha^{i + 1}, \ i \in \mathbb{N} \cup \{ 0 \},
+\end{equation}
+все ограничения на переменную, если они были в уравнении, удаляются.
 
 \end{document}
 
